fix for overflowing artist profile pic

--- a/server/templates/new-release-email/style.css
+++ b/server/templates/new-release-email/style.css
@@ -59,6 +59,7 @@
 
 #pic {
     height: 100%;
+    max-width: 100px;
 }
 
 #details {
